--- a/nandseewindow.ui
+++ b/nandseewindow.ui
@@ -36,7 +36,16 @@
     <addaction name="exportViewMenuItem"/>
     <addaction name="exportPageMenuItem"/>
    </widget>
+   <widget class="QMenu" name="menuWindow">
+    <property name="title">
+     <string>Window</string>
+    </property>
+    <addaction name="eventListAction"/>
+    <addaction name="eventDetailsAction"/>
+    <addaction name="utilitiesAction"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuWindow"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -47,7 +56,7 @@
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
-  <widget class="QDockWidget" name="dockWidget">
+  <widget class="QDockWidget" name="eventListDock">
    <property name="windowTitle">
     <string>Event List</string>
    </property>
@@ -78,7 +87,7 @@
     </layout>
    </widget>
   </widget>
-  <widget class="QDockWidget" name="dockWidget_2">
+  <widget class="QDockWidget" name="eventDetailsDock">
    <property name="windowTitle">
     <string>Event Details</string>
    </property>
@@ -194,7 +203,7 @@
     </layout>
    </widget>
   </widget>
-  <widget class="QDockWidget" name="dockWidget_4">
+  <widget class="QDockWidget" name="utilitiesDock">
    <property name="windowTitle">
     <string>Utilities</string>
    </property>
@@ -205,9 +214,6 @@
     <layout class="QGridLayout" name="gridLayout_3">
      <item row="0" column="1">
       <widget class="QLineEdit" name="xorPattern"/>
-     </item>
-     <item row="1" column="1">
-      <widget class="NandView" name="nandView" native="true"/>
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label_8">
@@ -235,15 +241,42 @@
     <string>Ctrl+Shift+S</string>
    </property>
   </action>
+  <action name="eventListAction">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Event list</string>
+   </property>
+  </action>
+  <action name="eventDetailsAction">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Event details</string>
+   </property>
+  </action>
+  <action name="utilitiesAction">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Utilities</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
-  <customwidget>
-   <class>NandView</class>
-   <extends>QWidget</extends>
-   <header>nandview.h</header>
-   <container>1</container>
-  </customwidget>
   <customwidget>
    <class>QHexEdit</class>
    <extends>QWidget</extends>
@@ -252,5 +285,102 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>eventListAction</sender>
+   <signal>triggered(bool)</signal>
+   <receiver>eventListDock</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>139</x>
+     <y>278</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>eventListDock</sender>
+   <signal>visibilityChanged(bool)</signal>
+   <receiver>eventListAction</receiver>
+   <slot>setChecked(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>139</x>
+     <y>278</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>eventDetailsAction</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>eventDetailsDock</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1062</x>
+     <y>203</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>eventDetailsDock</sender>
+   <signal>visibilityChanged(bool)</signal>
+   <receiver>eventDetailsAction</receiver>
+   <slot>setChecked(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1062</x>
+     <y>203</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>utilitiesAction</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>utilitiesDock</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1062</x>
+     <y>447</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>utilitiesDock</sender>
+   <signal>visibilityChanged(bool)</signal>
+   <receiver>utilitiesAction</receiver>
+   <slot>setChecked(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1062</x>
+     <y>447</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
