nandseewindow: Add "Quit" menu command

--- a/nandseewindow.ui
+++ b/nandseewindow.ui
@@ -35,6 +35,8 @@
     </property>
     <addaction name="exportViewMenuItem"/>
     <addaction name="exportPageMenuItem"/>
+    <addaction name="separator"/>
+    <addaction name="actionQuit"/>
    </widget>
    <widget class="QMenu" name="menuWindow">
     <property name="title">
@@ -405,6 +407,14 @@
     <string>Reset all ignored packets</string>
    </property>
   </action>
+  <action name="actionQuit">
+   <property name="text">
+    <string>Quit</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
@@ -510,6 +520,22 @@
     <hint type="destinationlabel">
      <x>-1</x>
      <y>-1</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionQuit</sender>
+   <signal>triggered()</signal>
+   <receiver>NandSeeWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>599</x>
+     <y>310</y>
     </hint>
    </hints>
   </connection>
