event: Correctly decode read column/row address
We now correctly decode both the row and the column address.
Unfortunately, we can't decode the entirety of the "row" address,
which consists of LUN, block, and page addresses, as we don't know
how many LUNs or blocks this part has.

--- a/nandseewindow.ui
+++ b/nandseewindow.ui
@@ -255,6 +255,20 @@
        </property>
       </widget>
      </item>
+     <item row="10" column="0">
+      <widget class="QLabel" name="attribute3Label">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="1">
+      <widget class="QLabel" name="attribute3Value">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
   </widget>
