--- a/nandseewindow.ui
+++ b/nandseewindow.ui
@@ -26,7 +26,7 @@
      <x>0</x>
      <y>0</y>
      <width>1200</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -59,6 +59,7 @@
    <addaction name="ignoreEventsAction"/>
    <addaction name="unignoreEventsAction"/>
    <addaction name="actionHighlightMatches"/>
+   <addaction name="actionInvertValues"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QDockWidget" name="eventListDock">
@@ -281,9 +282,6 @@
    </attribute>
    <widget class="QWidget" name="dockWidgetContents_4">
     <layout class="QGridLayout" name="gridLayout_3">
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="xorPattern"/>
-     </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label_8">
        <property name="text">
@@ -291,13 +289,25 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="xorPattern"/>
+     </item>
      <item row="2" column="0" colspan="2">
       <widget class="QGroupBox" name="groupBox">
        <property name="title">
         <string>Raw event body</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_4">
-        <property name="margin">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
          <number>0</number>
         </property>
         <item row="0" column="0">
@@ -321,7 +331,16 @@
         <string>Raw event header</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_5">
-        <property name="margin">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
          <number>0</number>
         </property>
         <item row="0" column="0">
@@ -439,6 +458,17 @@
    </property>
    <property name="toolTip">
     <string>Highlight similar hex values</string>
+   </property>
+  </action>
+  <action name="actionInvertValues">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Invert Values</string>
+   </property>
+   <property name="toolTip">
+    <string>Invert Hex Values</string>
    </property>
   </action>
  </widget>
