--- a/nandseewindow.ui
+++ b/nandseewindow.ui
@@ -16,9 +16,7 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="QHexEdit" name="hexView" native="true">
-      <zorder>groupBox_3</zorder>
-     </widget>
+     <widget class="QHexEdit" name="hexView" native="true"/>
     </item>
    </layout>
   </widget>
@@ -28,7 +26,7 @@
      <x>0</x>
      <y>0</y>
      <width>1200</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -295,22 +293,23 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0" colspan="2">
+     <item row="1" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Xor skip:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="xorPatternSkip"/>
+     </item>
+     <item row="3" column="0" colspan="2">
       <widget class="QGroupBox" name="groupBox">
        <property name="title">
         <string>Raw event body</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_4">
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
+        <property name="margin">
          <number>0</number>
         </property>
         <item row="0" column="0">
@@ -328,25 +327,16 @@
        </layout>
       </widget>
      </item>
-     <item row="2" column="0" colspan="3">
+     <item row="2" column="0" colspan="2">
       <widget class="QGroupBox" name="groupBox_2">
        <property name="title">
         <string>Raw event header</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_5">
-        <property name="leftMargin">
+        <property name="margin">
          <number>0</number>
         </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
-         <number>0</number>
-        </property>
-        <item row="0" column="0">
+        <item row="1" column="0">
          <widget class="QLabel" name="rawPacketHeader">
           <property name="minimumSize">
            <size>
@@ -370,34 +360,24 @@
        </layout>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Xor skip:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="2">
-      <widget class="QLineEdit" name="xorPatternSkip"/>
-     </item>
     </layout>
    </widget>
   </widget>
   <widget class="QDockWidget" name="statsWidget">
    <property name="minimumSize">
     <size>
-     <width>280</width>
-     <height>128</height>
+     <width>812</width>
+     <height>226</height>
     </size>
    </property>
    <property name="toolTip">
-    <string>Stats</string>
+    <string/>
    </property>
    <property name="statusTip">
-    <string>Stats</string>
+    <string/>
    </property>
    <property name="whatsThis">
-    <string>Stats</string>
+    <string/>
    </property>
    <property name="windowTitle">
     <string>Stats</string>
@@ -406,18 +386,30 @@
     <number>8</number>
    </attribute>
    <widget class="QWidget" name="dockWidgetContents_3">
-    <widget class="QWidget" name="horizontalLayoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>1191</width>
-       <height>181</height>
-      </rect>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>200</height>
+     </size>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="HistogramView" name="histogramView" native="true">
+       <property name="minimumSize">
+        <size>
+         <width>700</width>
+         <height>0</height>
+        </size>
+       </property>
        <widget class="QPlainTextEdit" name="histogramValues">
+        <property name="geometry">
+         <rect>
+          <x>580</x>
+          <y>0</y>
+          <width>241</width>
+          <height>171</height>
+         </rect>
+        </property>
         <property name="font">
          <font>
           <family>Courier</family>
@@ -427,16 +419,9 @@
          <bool>true</bool>
         </property>
        </widget>
-      </item>
-      <item>
-       <widget class="QGraphicsView" name="histogramView">
-        <property name="alignment">
-         <set>Qt::AlignHCenter|Qt::AlignTop</set>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <action name="exportViewMenuItem">
@@ -529,7 +514,7 @@
     <string>Highlight similar hex values</string>
    </property>
   </action>
- <action name="actionInvertValues">
+  <action name="actionInvertValues">
    <property name="checkable">
     <bool>true</bool>
    </property>
@@ -558,6 +543,12 @@
    <class>QHexEdit</class>
    <extends>QWidget</extends>
    <header>qhexedit.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>HistogramView</class>
+   <extends>QWidget</extends>
+   <header>histogramview.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
