--- a/nandseewindow.ui
+++ b/nandseewindow.ui
@@ -293,73 +293,6 @@
      <item row="0" column="1">
       <widget class="QLineEdit" name="xorPattern"/>
      </item>
-     <item row="2" column="0" colspan="2">
-      <widget class="QGroupBox" name="groupBox">
-       <property name="title">
-        <string>Raw event body</string>
-       </property>
-       <layout class="QGridLayout" name="gridLayout_4">
-        <property name="margin">
-         <number>0</number>
-        </property>
-        <item row="0" column="0">
-         <widget class="QPlainTextEdit" name="rawPacketView">
-          <property name="font">
-           <font>
-            <family>Courier</family>
-           </font>
-          </property>
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-     </item>
-     <item row="1" column="0" colspan="2">
-      <widget class="QGroupBox" name="groupBox_2">
-       <property name="title">
-        <string>Raw event header</string>
-       </property>
-       <layout class="QGridLayout" name="gridLayout_5">
-        <property name="margin">
-         <number>0</number>
-        </property>
-        <item row="1" column="0">
-         <widget class="QLabel" name="rawPacketHeader">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>24</height>
-           </size>
-          </property>
-          <property name="font">
-           <font>
-            <family>Courier</family>
-           </font>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_8">
-       <property name="text">
-        <string>Xor pattern:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="xorPattern"/>
-     </item>
      <item row="1" column="1">
       <widget class="QPushButton" name="optimizeXor">
        <property name="text">
@@ -385,7 +318,7 @@
   <widget class="QDockWidget" name="statsWidget">
    <property name="minimumSize">
     <size>
-     <width>812</width>
+     <width>100</width>
      <height>226</height>
     </size>
    </property>
@@ -405,18 +338,18 @@
     <number>8</number>
    </attribute>
    <widget class="QWidget" name="dockWidgetContents_3">
-    <widget class="QWidget" name="horizontalLayoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>1191</width>
-       <height>181</height>
-      </rect>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="HistogramView" name="histogramView" native="true">
        <widget class="QPlainTextEdit" name="histogramValues">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>211</width>
+          <height>61</height>
+         </rect>
+        </property>
         <property name="font">
          <font>
           <family>Courier</family>
@@ -426,16 +359,9 @@
          <bool>true</bool>
         </property>
        </widget>
-      </item>
-      <item>
-       <widget class="QGraphicsView" name="histogramView">
-        <property name="alignment">
-         <set>Qt::AlignHCenter|Qt::AlignTop</set>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <action name="exportViewMenuItem">
