nandseewindow: Move some things around

--- a/nandseewindow.ui
+++ b/nandseewindow.ui
@@ -346,16 +346,40 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>211</width>
-          <height>61</height>
+          <width>241</width>
+          <height>101</height>
          </rect>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
         <property name="font">
          <font>
           <family>Courier</family>
          </font>
         </property>
+        <property name="acceptDrops">
+         <bool>false</bool>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgba(255, 255, 255, 32);</string>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::NoFrame</enum>
+        </property>
+        <property name="undoRedoEnabled">
+         <bool>false</bool>
+        </property>
         <property name="readOnly">
+         <bool>true</bool>
+        </property>
+        <property name="plainText">
+         <string/>
+        </property>
+        <property name="backgroundVisible">
          <bool>true</bool>
         </property>
        </widget>
