sync up changes

--- a/nandseewindow.ui
+++ b/nandseewindow.ui
@@ -26,7 +26,7 @@
      <x>0</x>
      <y>0</y>
      <width>1200</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -309,6 +309,13 @@
        </property>
        <property name="readOnly">
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QSpinBox" name="lastAlignOffset">
+       <property name="maximum">
+        <number>512</number>
        </property>
       </widget>
      </item>
